# CG184

./: .gitignore  CG184.sln  CMakeLists.txt  CMakeSettings.json  README.md
CG184/: CG184.vcxproj  CG184.vcxproj.filters  CMakeLists.txt  main.cpp
CG184/Resources/objects/rock/: cubeNoNormal.dae
CG184/TestShaders/: BoxSolid.fs  BoxSolid.vs  PhongShader.fs  PhongShader.vs  TextureSetup.fs  TextureSetup.vs  anchor.fs  anchor.vs  coordinate_systems.fs  coordinate_systems.vs  multipleLights.fs  multipleLights.vs  picker.fs  solidWireframe.fs  solidWireframe.gs  solidWireframe.vs  texture.fs  texture.vs
CG184/include/Camera/: Camera.h
CG184/include/EventSystem/: Input.h
CG184/include/Geometry/: Box.h  HalfEdgeElement.h  Mesh.h  Sphere.h  Torus.h
CG184/include/Graphics/: Material.h  Renderer.h  Shader.h
CG184/include/Lights/: DirectionalLight.h  Light.h  Lights.h  PointLight.h  SpotLight.h
CG184/include/Maths/: Constants.h  Matrix4D.h  Quaternions.h  Vector2D.h  Vector3D.h  Vector3D.h~RF3aa7a2af.TMP  Vector4D.h
CG184/include/Scene/: Componet.h  Node.h  Scene.h  Transform.h
CG184/src/Camera/: Camera.cpp  Camera.h
CG184/src/EventSystem/: Input.cpp  Input.h
CG184/src/Geometry/: Box.cpp  Box.h  Circle.cpp  Circle.h  Geometry.h  HalfEdgeElement.cpp  HalfEdgeElement.h  Mesh.cpp  Mesh.h  MeshFilter.cpp  MeshFilter.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
CG184/src/Graphics/: IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
CG184/src/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
CG184/src/Maths/: Constants.h  Maths.h  Matrix4D.cpp  Matrix4D.h  Quaternions.cpp  Quaternions.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
CG184/src/Scene/: Componet.h  Node.cpp  Node.h  Nodes.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
external-dependencies/Extras/: root_directory.h
